# logging-discord

./: .gitignore  .readthedocs.yaml  .secrets.toml  README-en.md  README-pt.md  README.en.md  README.md  config.py  mkdocs.yml  mkdocs.yml.bak  pyproject.toml  settings.toml
.github/workflows/: pipeline.yml
docs/: config.yml  index.md  main.yml  mkdocs.yml
docs/api/: send_to_discord.md
docs/assets/css/: extra.css
docs/en/: contribute.md  index.md  mkdocs.insiders.yml  mkdocs.maybe-insiders.yml  mkdocs.yml
docs/en/docs/: contribute.md  donate.md  index.md  installation.md  use.md
docs/en/docs/api/: send_discord.md
docs/languages/: index.en.md  index.md  index.pt.md
docs/pt/: donate.md  index.md  mkdocs.yml  use.md
docs/pt/docs/: installation.md
logging_discord/: __init__.py  config.py  data_log.py  default.py  send_discord.py  send_to_discord.py
tests/: test_init.py  test_publish_record.py  test_remove_extra_characters.py  test_send.py
