[tool.poetry]
name = "logging-discord"
version = "0.1.0"
description = ""
authors = ["bruno_brown <brunobrown.86@gmail.com>"]
readme = "README.md"
packages = [{include = "logging_discord"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.16"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = '.'
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=logging_discord -vv"
post_test = "coverage html"